@@ -93,10 +93,10 @@ check_status ()
     if [ -f "$_JVM_PIDFILE" ]; then
         _JVM_PID=`cat "$_JVM_PIDFILE"`
         if [ -n "$_JVM_PID" ] && kill -0 $_JVM_PID 2>/dev/null ; then
-            _JVM_STATUS=`printf "%-30s (pid %-7s) is %s" "JBossAS Java VM child process" $_SERVER_PID $1`
+            _JVM_STATUS=`printf "%-30s (pid %-7s) is %s" "JBossAS Java VM child process" $_JVM_PID $1`
             _JVM_RUNNING=1
         else
-            _JVM_STATUS=`printf "%-30s (pid %-7s) is down" "JBossAS Java VM child process" $_SERVER_PID`
+            _JVM_STATUS=`printf "%-30s (pid %-7s) is down" "JBossAS Java VM child process" $_JVM_PID`
             _JVM_RUNNING=0
         fi
     else
@@ -353,7 +353,7 @@ fi
 # Add the JVM opts that we always want to specify, whether or not the user set RHQ_SERVER_JAVA_OPTS.
 # Note that the double equals for the policy file specification IS INTENTIONAL
 _HTTP_COMPRESSION="-Dorg.apache.coyote.http11.Http11Protocol.COMPRESSION=on -Dorg.apache.coyote.http11.Http11Protocol.COMPRESSION_MIME_TYPES=text/javascript,text/css,text/html"
-RHQ_SERVER_JAVA_OPTS="-Dapp.name=rhq-server ${RHQ_SERVER_JAVA_OPTS} -Drhq.server.home=${RHQ_SERVER_HOME} -Djboss.server.log.dir=${_LOG_DIR_PATH} -Djava.awt.headless=true -Dsun.lang.ClassLoader.allowArraySyntax=true -Djboss.server.default.config=standalone-full.xml -Djboss.modules.system.pkgs=org.jboss.byteman -Djava.security.manager -Djava.security.policy==${RHQ_SERVER_HOME}/bin/internal/rhq-server.security-policy ${_HTTP_COMPRESSION} ${_JBOSS_DEBUG_LOGGING}"
+RHQ_SERVER_JAVA_OPTS="-Dapp.name=rhq-server ${RHQ_SERVER_JAVA_OPTS} -Drhq.server.home=${RHQ_SERVER_HOME} -Djboss.server.log.dir=${_LOG_DIR_PATH} -Djava.awt.headless=true -Dsun.lang.ClassLoader.allowArraySyntax=true -Djboss.server.default.config=standalone-full.xml -Djboss.modules.system.pkgs=org.jboss.byteman -DXXXjava.security.manager -Djava.security.policy==${RHQ_SERVER_HOME}/bin/internal/rhq-server.security-policy ${_HTTP_COMPRESSION} ${_JBOSS_DEBUG_LOGGING}"
 
 debug_msg "RHQ_SERVER_JAVA_OPTS: $RHQ_SERVER_JAVA_OPTS"
 debug_msg "RHQ_SERVER_ADDITIONAL_JAVA_OPTS: $RHQ_SERVER_ADDITIONAL_JAVA_OPTS"
